# meraki_chess

repo_root/chess_dataprocessing/: README.md  interpret.py  interpret2.py  interpret3.py  learning.py  venv_manual.txt
repo_root/chess_dataprocessing/data/: 10 output.csv  20 output.csv  max output.csv  output.csv  processed_positions.csv  processed_positions_cleaned.csv
repo_root/chess_dataprocessing/models/: logreg_coeffs.json
repo_root/chess_engine/: .gitignore  README.md  bench.csv  input_fen_gui.py  input_fen_gui_new.py  monitor_resources.py  pyproject.toml  requirements.txt  venv_manual.txt
repo_root/chess_engine/chess_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
repo_root/chess_engine/chess_engine/cli/: bench.py  play.py
repo_root/chess_engine/chess_engine/engine/: move_order.py  searcher.py  time_manager.py  tt.py
repo_root/chess_engine/chess_engine/eval/: heuristic.py  ml_bridge.py
repo_root/chess_engine/chess_engine/io/: fen_utils.py  uci.py
repo_root/chess_engine/engine/: move_order.py  searcher.py  time_manager.py  tt.py
repo_root/chess_engine/engine/cli/: bench.py  play.py
repo_root/chess_engine/eval/: heuristic.py  ml_bridge.py
repo_root/chess_engine/io/: fen_utils.py  uci.py
repo_root/chess_engine/monitor_out/: monitor_20251113_140652.csv  monitor_20251113_141018.csv
