[project]
name = "chess-engine"
version = "0.1.0"
description = "Search-only chess engine (alpha-beta, TT, QS, LMR) with optional logistic-coeff bridge"
requires-python = ">=3.9"
dependencies = [
  "chess>=1.11.2",
  "matplotlib>=3.7",
  "tomli; python_version<'3.11'"
]
[tool.setuptools.packages.find]
where = ["src"]
